Fixed spacing issue in changelog popup

--- a/frontend/src/components/markdown-text.module.css
+++ b/frontend/src/components/markdown-text.module.css
@@ -20,7 +20,7 @@
     margin-right: 0;
   }
 
-  & p:first-child {
+  & :is(p, h1, h2, h3, h4, h5, h6):first-child {
     margin-block-start: 0;
   }
   & p:last-child {
